--- a/emosProject/src/common/driver.properties
+++ b/emosProject/src/common/driver.properties
@@ -1,5 +1,5 @@
 #driver.properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-user=emos
-passwd=emos
+user=student
+passwd=student
