--- a/emosProject/web/WEB-INF/classes/common/driver.properties
+++ b/emosProject/web/WEB-INF/classes/common/driver.properties
@@ -1,5 +1,5 @@
 #driver.properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@127.0.0.1:1521:xe
-user=student
-passwd=student
+user=emos
+passwd=emos
